--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <li><a href="ch02/">Chapter 2</a></li>
             <li><a href="ch03/">Chapter 3</a></li>
             <li><a href="ch04/">Chapter 4</a></li>
+             <li><a href="ch07/">Chapter7</a></li>
         </ul>
     </nav>
 </body>
-
 </html>
