--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <ul>
             <li><a href="ch02/">Chapter 2</a></li>
-            <li><a href="ch03/">Chapter 3</a></li>
+            <li><a href="ch03/box_model_challenge">Chapter 3</a></li>
             <li><a href="ch04/">Chapter 4</a></li>
-             <li><a href="ch07/">Chapter 7</a></li>
+             <li><a href="ch07/seaTurtle">Chapter 7</a></li>
         </ul>
     </nav>
 </body>
